--- a/lesson23/index.html
+++ b/lesson23/index.html
@@ -71,7 +71,136 @@
 		}
 	</style>
 	<script>
-
+		// Задача 1. Дано масив рядків. Вивести ті, у яких є цифри (використати метод test та регулярні вирази).
+		let arrOfStrings_1 = ['My name is Pavlo.', 'He is 18 y.o.', 'She has 2 dogs and 1 cat.', 'I like pasta so much.']
+		let re_1 = /\d/g
+		for (const string of arrOfStrings_1) {
+			if (re_1.test(string))
+				console.log(string)
+		}
+		//-------------------------------------------------------------------------------------------
+		// Задача 2. Дано масив рядків. Вивести ті, у яких немає цифр.
+		let arrOfStrings_2 = ['Pizza', '18', '243', 'Bird', '5', 'str']
+		let re_2 = /\D/g
+		for (const string of arrOfStrings_2) {
+			if (re_2.test(string))
+				console.log(string)
+		}
+		//-------------------------------------------------------------------------------------------
+		// Задача 3. Дано масив рядків. Вивести ті, у яких є голосні літери.
+		let arrOfStrings_3 = ['YO', 'xyz', 'BZZZzzz', 'sun']
+		let re_3 = /[aeiouy]/ig
+		for (const string of arrOfStrings_3) {
+			if (re_3.test(string))
+				console.log(string)
+		}
+		//-------------------------------------------------------------------------------------------
+		// Задача 4. Дано масив рядків. Вивести ті, у яких немає голосних літер.
+		let arrOfStrings_4 = ['PR', 'Ouu', 'aaaa', 'str']
+		let re_4 = /[^aeiouy]/gi
+		for (const string of arrOfStrings_4) {
+			if (re_4.test(string))
+				console.log(string)
+		}
+		//-------------------------------------------------------------------------------------------
+		// Задача 5. Дано масив рядків.Вивести ті, у яких є або цифра 1 або цифра 3.
+		let arrOfStrings_5 = ['5 pigs', '3 dogs', '1 cat', '7 elephants', '1 skunk', '10 cows']
+		let re_5 = /[1|3]/g
+		for (const string of arrOfStrings_5) {
+			re_5.lastIndex = 0
+			if (re_5.test(string))
+				console.log(string)
+		}
+		//-------------------------------------------------------------------------------------------
+		// Задача 6. Дано рядок тексту, вивести усі числа, які є у тексті.
+		let str_1 = 'There are 10 cows, 9 sheep, 8 geese, 7 chickens, 6 donkeys, 5 horses, 4 bulls, 3 cocks, 2 cats and 1 dog live on my farm.'
+		let re_6 = /\d+/g
+		let result = str_1.match(re_6)
+		console.log(result)
+		//-------------------------------------------------------------------------------------------
+		// Задача 7. Дано рядок тексту.Знайти усі знаки пунктуації, які були використано.
+		let re_7 = /[^\d\w\s]/g
+		let result_1 = str_1.match(re_7)
+		console.log(result_1);
+		//-------------------------------------------------------------------------------------------
+		// Задача 8. Дано рядок тексту.Вивести усі складові, які розділені розділовими знаками.
+		let re_8 = /\w+,/gim
+		let result_2 = str_1.match(re_8)
+		console.log(result_2)
+		//-------------------------------------------------------------------------------------------
+		// Задача 9. Дано рядок тексту.Перевірити, чи містить він дату у форматі dd.mm.yyyy(dd - день, mm - місяць, yyyy - рік). z
+		let str_2 = 'Apollo 11 (31.07.1969) was the American spaceflight that first landed humans on the Moon.'
+		let re_9 = /\d{2}\.\d{2}\.\d{4}/g
+		let re_10 = /[0-3][0-9]\.(0|1)[0-9]\.\d{4}/g
+		//для днів (0[1-9]- пара 01-09 - [12][0-9] або пара 10-29 - або пара 30-31)- люитй може приймати 29-31
+		//для місяців (0[1-9] - пара 01-09 або пара 10-12 1[0-2])
+		// для років (10|20 від 1000 до 2000 року), \d{2} - дві довільні цифри
+		let re_11 = /(0[1-9]|[12][0-9]|3[01])\.(0[1-9]|1[0-2])\.(10|20)\d{2}/g
+		console.log(re_9.test(str_2))
+		console.log(re_10.test(str_2))
+		console.log(re_11.test(str_2))
+		//-------------------------------------------------------------------------------------------
+		//Задача 10. Дано рядок тексту. Підрахувати кількість двоцифрових чисел у рядку.
+		let str_3 = 'There are 1 coffee machine, 2 refrigerators, 10 game consoles, 150 tables, 200 chairs, 100 computers, 37 tablets, 20 printers, 50 cars in our warehouse.'
+		let re_12 = /\d+/g
+		let re_13 = /\b\d{2}\b/g
+		let numbers = str_3.match(re_12).filter((number) => number >= 9 && number <= 99)
+		console.log(numbers)
+		console.log(str_3.match(re_13))
+		//-------------------------------------------------------------------------------------------
+		// Задача 11. Визначити чи може бути рядок тексту номером банківської картки(приклад: «4142 - 3433 - 2323 - 3434»).Знайти усі такі номери.
+		let str_4 = 'I have 3 credit cards. The first of them is Visa, its number «1144 - 1254 - 1365 - 9988», the second one is MasterCard, its number «2233 - 6547 - 9918 - 3416», and the last one is MasterCard too, its number «1114 - 4449 - 9634 - 9212».'
+		let re_14 = /(«\d{4} - \d{4} - \d{4} - \d{4}»)/g
+		let re_15 = /(«? ?\d{4} ?-?»?)+/g
+		console.log(str_4.match(re_14))
+		console.log(str_4.match(re_15))
+		//-------------------------------------------------------------------------------------------
+		// Задача 12. Дано адресу сайту.Визначити, чи є він урядовим(містить домен “gov”)
+		let presidentSiteLink = 'https://president.gov.ua/'
+		let re_16 = /(\.gov)/
+		let re_17 = /[.gov]/
+		if (re_16.test(presidentSiteLink))
+			console.log('Сайт урядовий')
+		else
+			console.log('Сайт не урядовий')
+		//-------------------------------------------------------------------------------------------
+		// Задача 13. Вибрати усі роки після 2021 року з отриманого повідомлення.
+		let message = 'After the dissolution of the Soviet Union (USSR) in 1991, Ukraine and Russia maintained close ties. In 1994, Ukraine agreed to accede to the Treaty on the Non-Proliferation of Nuclear Weapons as a non-nuclear-weapon state. In 1999, Russia was one of the signatories of the Charter for European Security, which "reaffirmed the inherent right of each and every participating State to be free to choose or change its security arrangements, including treaties of alliance, as they evolve." The Russo-Ukrainian War is an ongoing international conflict between Russia, alongside Russian-backed separatists, and Ukraine, which began in February 2014. In February 2015, Russia and Ukraine signed the Minsk II agreements to end the conflict, but the agreements were never fully implemented in the years that followed. Beginning in 2021, Russia built up a large military presence near its border with Ukraine, including within neighbouring Belarus. In February 2022, Russia launched a full-scale invasion of Ukraine. Russia spent the winter conducting inconclusive offensive operations in the Donbas, and in the spring of 2023 dug into positions for an anticipated Ukrainian counteroffensive.'
+		// 2[0-9][2-9][2-9] - 22-29,32-39,42-49, 52-59, 62-69, 72-79, 82-89, 92-99
+		// 2[0-9][3-9][0-9] - 2030-2099
+		// [2-9][1-9]\d{2}  - 2100-2999
+		// [3-9]\d{3} -       3000-....
+		let re_18 = /(2[0-9][2-9][2-9]|2[0-9][3-9][0-9]|[2-9][1-9]\d{2}|[3-9]\d{3})/g
+		console.log(message.match(re_18))
+		//-------------------------------------------------------------------------------------------
+		// Задача 14. Дано номер телефону.Перевірити, чи є цей телефон телефоном з України(починаєтсья на «+38»)
+		let cellphoneNumber = '+380634282096'
+		let re_19 = /(^\+38)/
+		if (re_19.test(cellphoneNumber))
+			console.log('Телефонний номер з України')
+		else console.log('Телефонний номер не з України')
+		//-------------------------------------------------------------------------------------------
+		// Задача 15. Користувач вводить прізвище та ім’я в одному рядку через пробіл.Замінити пробіл на дефіс.
+		// let userName = prompt('name')
+		let userName = 'John Lennon'
+		userName = userName.replace(' ', '-')
+		console.log(userName)
+		//-------------------------------------------------------------------------------------------
+		//Задача 16. Користувач вводить дату у форматі «день.місяць.рік». Отримати рядкове представлення дати у форматі «день/місяць/рік»
+		// let userDate = prompt('date')
+		let userDate = '   24.01.1991 '
+		userDate = userDate.replaceAll('.', '/').trim()
+		console.log(userDate)
+		//-------------------------------------------------------------------------------------------
+		// Задача 17. Користувач вводить день(номер дня(0 - 6) або «sun, mon, tue, wed, thu, fri, sat»).Визначити, чи  є це день вихідним
+		let re_20 = /[0-6]|(sun|mon|tue|wed|thu|fri|sat)/gi
+		let userAnswer = prompt('day (0-6 or sun-sat)')
+		console.log(userAnswer)
+		let day = userAnswer.match(re_20).join().toLocaleLowerCase()
+		if ((day == 'sun' || day == 'sat') || (day == '0' || day == '6'))
+			alert('It is a weeknd')
+		else alert('It is a weekday')
+		//-------------------------------------------------------------------------------------------
 	</script>
 </head>
 <body>
