--- a/lesson24/index.html
+++ b/lesson24/index.html
@@ -76,28 +76,39 @@
 		<h1>Домашні завдання (Урок 24).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task01.html"></a>
+				<a target="_blank" href="./tasks/task01.html">Задача 5. Дано список з віком учнів. Підрахувати скільки разів
+					кожне значення зустрічається у списку і максимальне.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task02.html"></a>
+				<a target="_blank" href="./tasks/task02.html">Задача 6. Дано масив книг (назва, рік видання, автор). Підрахувати
+					кількість книг для кожного автора.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task03.html"></a>
+				<a target="_blank" href="./tasks/task03.html">Задача 7. Дано інформацію про відвідувачів деякого сайту (для
+					кожного відвідувача зберігається логін). Підрахувати для кожного клієнта кількість відвідувань.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task04.html"></a>
+				<a target="_blank" href="./tasks/task04.html">Задача 8. Дано масив студентів (піб, курс, факультет). Підрахувати
+					кількість різних факультетів, та кількість студентів кожного з курсів.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task05.html"></a>
+				<a target="_blank" href="./tasks/task05.html">Задача 9. Дано масив показів температур. Підрахувати кількість
+					входжень кожного із показів. Заокруглити вверх значення та підрахувати кількість різних показів.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task06.html"></a>
+				<a target="_blank" href="./tasks/task06.html">Задача 10 Дано два списки прізвищ студентів, що відвідують гуртки
+					з математики і історії. Підрахувати скільки студентів з гуртка з історії також відвідують гурток з математики.
+					Також підрахувати скільки всього студентів відвідують хоча б один гурток.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task07.html"></a>
+				<a target="_blank" href="./tasks/task07.html">Задача 11. Користувач може змінювати колір фону, що вибирає
+					користувач з використанням. Зберігати цей колір і відновлювати при наступному відкритті. Також зберігати і
+					відображати кількість змін протягом одного сеансу.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task08.html"></a>
+				<a target="_blank" href="./tasks/task08.html">Задача 12. Зберігати у пам’яті список справ, які користувачу треба
+					виконати (зберігати у localStorage). Періодично випадковим чином вибирати якусь з справ і виводити користувачу
+					(з використанням confirm). Якщо користувач натискає на «Ок», то видаляти цю задачу.</a>
 			</li>
 		</ol>
 	</div>
