--- a/lesson24/tasks/task01.html
+++ b/lesson24/tasks/task01.html
@@ -50,11 +50,21 @@
 		}
 	</style>
 	<script>
+		// Задача 5. Дано список з віком учнів. Підрахувати скільки разів кожне значення зустрічається у списку і максимальне.
+		const studentsAges = [7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 8, 8, 9, 14, 15, 15, 16, 17, 11, 11, 11, 8, 7]
+		let mapAges = new Map()
+		for (const age of studentsAges) {
+			mapAges.set(age, (mapAges.get(age) ?? 0) + 1)
+		}
+		const maxAge = Math.max(...mapAges.keys())
+		console.log(mapAges)
+		console.log(maxAge)
 	</script>
 </head>
 <body>
 	<div class="container">
-		<h2 class="task-title"></h2>
+		<h2 class="task-title">Задача 5. Дано список з віком учнів. Підрахувати скільки разів кожне значення зустрічається у
+			списку і максимальне.</h2>
 	</div>
 </body>
 </html>
