--- a/lesson24/tasks/task05.html
+++ b/lesson24/tasks/task05.html
@@ -50,11 +50,26 @@
 		}
 	</style>
 	<script>
+		// Задача 9. Дано масив показів температур.Підрахувати кількість входжень кожного із показів
+		// Заокруглити вверх значення та підрахувати кількість різних показів.
+		// 	let temperatures = [12.4, 24.9, 10.6, 12.4, 24.9, 12.4, 10.6, 11.9]
+		let temperatures = [12.4, 24.9, 10.6, 12.4, 24.9, 12.4, 10.6, 11.9]
+		let temperaturesMap = new Map()
+		for (const temperature of temperatures) {
+			temperaturesMap.set(temperature, (temperaturesMap.get(temperature) ?? 0) + 1)
+		}
+		temperatures.forEach((val, ind, baseArr) => {
+			baseArr[ind] = Math.ceil(val)
+		})
+		let temperaturesSet = new Set(temperatures)
+		console.log(temperaturesMap)
+		console.log(temperaturesSet.size)
 	</script>
 </head>
 <body>
 	<div class="container">
-		<h2 class="task-title"></h2>
+		<h2 class="task-title">Задача 9. Дано масив показів температур.Підрахувати кількість входжень кожного із показів.
+			Заокруглити вверх значення та підрахувати кількість різних показів.</h2>
 	</div>
 </body>
 </html>
