--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 		<main>
 			<ul>
 				<li>
+					<a target="_blank" href="./lesson25/index.html">Домашні завдання (Урок № 25).</a>
+				</li>
+				<li>
 					<a target="_blank" href="./lesson24/index.html">Домашні завдання (Урок № 24).</a>
 				</li>
 				<li>
