--- a/lesson25/index.html
+++ b/lesson25/index.html
@@ -76,17 +76,23 @@
 		<h1>Домашні завдання (Урок 25).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task01.html"></a>
+				<a target="_blank" href="./tasks/task01.html">Задача 1. Дано клас PhoneNumber. Створити функцію перетворення до
+					string, при якому на основі номера виводиться оператор
+					(050…. 🡪 MTC, 096… 🡪 Kyivstar, ….)</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task02.html"></a>
+				<a target="_blank" href="./tasks/task02.html">Задача 2. Дано Shop -- клас, що містить список товарів (масив
+					об’єктів класу Product (назва, ціна, кількість одиниць)). Додати можливість ітератора до класу Shop, щоб при
+					ітеруванні для кожного елемента виводився рядок «товар-загальна
+					вартість».</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task03.html"></a>
+				<a target="_blank" href="./tasks/task03.html">Задача 3. Створити генератор, який би випадковим чином поступово
+					генерував вказану кількість парних чисел.</a>
 			</li>
-			<li>
+			<!-- <li>
 				<a target="_blank" href="./tasks/task04.html"></a>
-			</li>
+			</li> -->
 		</ol>
 	</div>
 </body>
