--- a/lesson25/index.html
+++ b/lesson25/index.html
@@ -90,9 +90,10 @@
 				<a target="_blank" href="./tasks/task03.html">Задача 3. Створити генератор, який би випадковим чином поступово
 					генерував вказану кількість парних чисел.</a>
 			</li>
-			<!-- <li>
-				<a target="_blank" href="./tasks/task04.html"></a>
-			</li> -->
+			<li>
+				<a target="_blank" href="./tasks/task04.html">Задача 4. Використовуючи один з АРІ та функцію fetch організувати
+					завантаження та відображення даних</a>
+			</li>
 		</ol>
 	</div>
 </body>
